log
Tue 14 Mar 2023 05:32:52 PM UTC: 
 tests:  0|7
total_score: 0/70
7adf5ba
Tue 14 Mar 2023 05:33:56 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|6
total_score: 10/70
332b5b3
Tue 14 Mar 2023 05:49:40 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:3: error: implicit declaration of function ‘cmp’; did you mean ‘bcmp’? [-Werror=implicit-function-declaration]
   31 |   cmp(const void *elem, const void *piv);
      |   ^~~
      |   bcmp
exercises.c:31:7: error: expected expression before ‘const’
   31 |   cmp(const void *elem, const void *piv);
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
c425029
Wed 15 Mar 2023 04:28:34 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
d04c522
Wed 15 Mar 2023 04:32:33 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|6
total_score: 10/70
5e0e22c
Wed 15 Mar 2023 04:34:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1a02d8d
Thu 16 Mar 2023 08:53:20 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   67 |   scanf("%s %s",p->nombre,p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:68:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   68 |   scanf("%i",&p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b2a5d3
Thu 16 Mar 2023 08:55:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   67 |   scanf("%s %s",(*p).nombre,(*p).rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:68:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   68 |   scanf("%i",&p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
43f75b2
Thu 16 Mar 2023 08:58:15 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   67 |   scanf("%s %s",p->nombre,p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:68:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   68 |   scanf("%i",&p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
399ae68
Thu 16 Mar 2023 09:15:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   67 |   scanf("%s %s",p->nombre,p->rut);
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
exercises.c:68:3: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   68 |   scanf("%i",&p->edad);
      |   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b41919
Thu 16 Mar 2023 09:17:09 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
bd0777a
Thu 16 Mar 2023 09:24:58 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:90:16: error: ‘vector’ undeclared (first use in this function); did you mean ‘Vector’?
   90 |   Vector *a = (vector *) calloc(n,sizeof(size_t));
      |                ^~~~~~
      |                Vector
exercises.c:90:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:90:24: error: expected expression before ‘)’ token
   90 |   Vector *a = (vector *) calloc(n,sizeof(size_t));
      |                        ^
Compilation failed
ee8c191
Thu 16 Mar 2023 09:25:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
ea28165
Thu 16 Mar 2023 09:25:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
37a25bb
